--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,120 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+body,
+html {
+  background-color: black;
+  font-family: "Roboto", sans-serif;
+}
+/* 
+div { */
+/* color: white;
+background: rgba(236, 226, 226, 0.11);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(6.3px);
+-webkit-backdrop-filter: blur(6.3px); */
+/* } */
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.header {
+  display: flex;
+  height: 40vh;
+  justify-content: center;
+  align-items: center;
+  background: rgba(236, 226, 226, 0.11);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.3px);
+  -webkit-backdrop-filter: blur(6.3px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.logo {
+  width: 144px;
+  height: 144px;
+  margin-top: 40vh;
+  border-radius: 50%;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.image-logo {
+  width: 144px;
+  height: 144px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 0%;
+  object-position: 50% 0%;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.links {
+  display: flex;
+  margin-top: 11vh;
+  flex-direction: column;
+  align-items: center;
+  font-size: 16px;
+  padding-bottom: 40px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.w-layout-grid {
+  display: grid;
+  grid-auto-columns: 1fr;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
+  grid-row-gap: 16px;
+  grid-column-gap: 16px;
 }
 
-a {
-  color: inherit;
+.grid {
+  grid-template-rows: auto auto;
+  color: white;
+}
+
+.link {
+  display: flex;
+  width: 150px;
+  height: 150px;
+  padding-top: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px none #000;
+  border-radius: 10px;
+  background-color: #fff;
+  background: rgba(236, 226, 226, 0.11);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.3px);
+  -webkit-backdrop-filter: blur(6.3px);
+  color: white;
+  font-size: 65px;
+  text-align: center;
   text-decoration: none;
+  text-transform: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+a img {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+svg, a img {
+  transition: all 0.4s ease-in-out;
+}
+
+a:hover svg , a:hover img{
+  transform: scale(1.1);
+}
+
+h1 {
+  color: white;
+  position: absolute;
+  top: 33%;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+
+@media screen and (max-width: 767px) {
+  .links {
+    margin-top: 18vh;
   }
 }
